--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
     </RelativeLayout>
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/rl_empty"
+        android:id="@+id/cl_empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="visible">
