--- a/app/src/main/res/layout/activity_check_firmware.xml
+++ b/app/src/main/res/layout/activity_check_firmware.xml
@@ -38,7 +38,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:paddingLeft="12dp"
-        android:paddingRight="12dp">
+        android:paddingRight="12dp"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
