--- a/app/src/main/res/layout/activity_select_work_mode.xml
+++ b/app/src/main/res/layout/activity_select_work_mode.xml
@@ -41,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="90dp"
-        android:text="Please select the device word mode"
+        android:text="Please select the device work mode"
         android:textColor="@color/blue_0188cc"
         android:textSize="15sp"
         app:layout_constraintLeft_toLeftOf="parent"
